fix(web): spacing below copy component

--- a/packages/web/src/app/shared/copy/copy.component.scss
+++ b/packages/web/src/app/shared/copy/copy.component.scss
@@ -4,6 +4,7 @@
   display: inline-block;
   overflow: auto;
   max-width: 100%;
+  vertical-align: top;
 }
 
 //only use this is the user allows motion
